--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ script:
 
 after_success:
         - bash <(curl -s https://codecov.io/bash)
+
+before_install:
+        - sudo apt-get -y install coinor-clp
